--- a/adaptive.css
+++ b/adaptive.css
@@ -94,8 +94,11 @@
     .request{
         position: absolute;
         z-index: 10000;
-        right: calc(50% - 25vw);
         bottom: -70%;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        max-width: 400px;
     }
     .input, .input::placeholder{
         opacity: 1;
@@ -200,6 +203,13 @@
     }
 }
 
+@media screen and (max-width: 555px){
+    .card__img {
+        width: 190px;
+    }
+}
+
+
 @media screen and (max-width: 546px){
     .card__content {
         min-width: 190px;
@@ -212,10 +222,11 @@
     }
     .card{
         position: relative;
+        margin-bottom: 56px;
     }
     .card__title{
         position: absolute;
-        top: 0;
+        top: -27px;
     }
     .order-not-available{
         top: 13px;
@@ -242,10 +253,9 @@
     .input::placeholder{
         font-size: 14px;
     }
-    .request {
+    /* .request {
         min-width: 390px;
-        right: calc(50% - 37vw);
-    }
+    } */
     .card {
         min-width: 194px;
     }
@@ -260,12 +270,6 @@
     }
     .footer__h3{
         margin-bottom: 20px;
-    }
-}
-
-@media screen and (max-width: 546px){
-    .request {
-        right: calc(50% - 46vw);
     }
     .catalog__container {
         justify-content: space-between;
@@ -282,10 +286,37 @@
     .catalog {
         padding-top: 340px;
     }
-}
-@media screen and (max-width: 431px){
-    .request {
-        right: calc(50% - 45vw);
+    .order-not-available {
+        top: 5px;
+        right: 7px;
     }
-    
+}
+
+@media screen and (max-width: 435px){
+    .btn {
+        font-size: 16px;
+    }
+}
+
+
+@media screen and (max-width: 427px){
+    .catalog__container {
+        align-items: center;
+        justify-content: center;
+    }
+    .card:nth-last-child(2) {
+        margin-bottom: 56px;
+    }
+    .request {
+        min-width: 339px;
+        max-width: 346px;
+    }
+}
+
+@media screen and (max-width: 355px){
+    .request{
+        max-width: 100%;
+        min-width: auto;
+        bottom: -36%;
+    }
 }
