--- a/catalog/catalog.css
+++ b/catalog/catalog.css
@@ -2,6 +2,7 @@
 .catalog {
     padding-top: 100px;
     padding-bottom: 75px;
+    background-color: #F2F2F2;
 }
 .catalog__container {
     flex-wrap: wrap;
@@ -9,25 +10,29 @@
 }
 
 .card__img {
-    height: 250px;
-    width: auto;
+    /* height: 250px; */
+    width: 245px;
 }
 .card__img img{
     width: 100%;
     height: 100%;
+    display: block;
 }
 
 .card {
+    /* max-width: 646px; */
     min-width: 646px;
     border: 1px solid #CECECE;
     margin-bottom: 20px;
     position: relative;
+    box-sizing: border-box;
 }
 
 .card__body {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 20px;
+    background-color:  #F2F2F2;
 }
 
 .card__title{
